Fixed overlapping dropdown-contents on nav bar. Logged out status showing correctly.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,14 +98,12 @@ a:hover {
     color: #fff;
     text-decoration: none;
 }
-/* .bottom-page {
-    margin-bottom: 20px !important;
-} */
 /********************************************************* Navbar   */
 
 .navbar-fixed nav {
     height: 174px;
     background-color: #e5e5e5;
+    z-index: 997;
 }
 
 .nav-wrapper{
@@ -121,6 +119,7 @@ a:hover {
     height: 56px;
     line-height: 56px;
     margin-left: 18px;
+    z-index: 998;
 }
 a .login-status-container {
     color: black;
@@ -128,6 +127,10 @@ a .login-status-container {
 a[data-target="account-options"] {
     width: fit-content;
     height: fit-content;
+    z-index: 999;
+}
+.dropdown-content {
+    z-index: 996;
 }
 .hide-very-small-and-down {
     display: none;
@@ -146,9 +149,20 @@ a[data-target="account-options"] {
     font-family: 'Abel', sans-serif;
 }
 
-
+#account-options {
+    /* Allows account options dropdown to be clicked */
+    z-index: 999;
+    width: 150px !important; 
+}
+#account-options li a {
+    text-align: right;
+    font-family: 'Abel', sans-serif;
+}
 #menu-options {
-    width: 150px !important;
+    width: 120px !important;
+}
+#deal-options {
+    width: 100px !important;
 }
 
 .nav-wrapper ul li a {
